--- a/templates/auth/register.html
+++ b/templates/auth/register.html
@@ -1,4 +1,4 @@
-{% extends "base.html" %}
+{% extends "layout.html" %}
 
 <!-- Header Plate -->
 {% block header_plate %}
@@ -9,14 +9,14 @@
 {% block main %}
     <nav class="plate">
         <a href="{{ url_for('login') }}">Log In</a>
-        <a href="{{ url_for('register') }}">Register</a>
+        <a href="{{ url_for('registration') }}">Register</a>
     </nav>
-    {% if msg %}
+    {% if error %}
     <p class="warning plate">
-        {{ msg }}
+        {{ error }}
     </p>
     {% endif %}
-    <form class="plate" action="{{ url_for('register') }}" method="post">
+    <form class="plate" action="{{ url_for('registration') }}" method="post">
         <div class="fields">
             <label for="first-name">First Name:</label>
             <input type="text" id="first-name" name="first-name" maxlength="32" required="" />
