New tabby things lol figure it out again

--- a/templates/tasklist/admin.html
+++ b/templates/tasklist/admin.html
@@ -2,15 +2,20 @@
 
 <!-- Header Plate -->
 {% block header_plate %}
-    <h1>Task List: {{ task_list["name"] }}</h1>
+    <h1>Admin Settings for {{ task_list["name"] }}</h1>
 {% endblock %}
 
 <!-- Main -->
 {% block main %}
     <nav class="plate">
         <a href="{{ url_for('home') }}">Back</a>
-        <a href="{{ url_for('task_list_basic', task_list_id=task_list['task_list_id']) }}">Basic</a>
-        <a href="{{ url_for('task_list_admin', task_list_id=task_list['task_list_id']) }}">Admin</a>
+        {% if user_type == "parent" %}
+            <a href="{{ url_for('task_list_admin', task_list_id=task_list['task_list_id']) }}">Admin</a>
+        {% endif %}
+        {% if user_type == "child" or user_type == "parent" %}
+            <a href="{{ url_for('task_list_basic', task_list_id=task_list['task_list_id']) }}">Basic</a>
+            <a href="{{ url_for('task_list_wish_list', task_list_id=task_list['task_list_id']) }}">Wish List</a>
+        {% endif %}
     </nav>
     {% if error %}
         <p class="warning plate">
