--- a/templates/tasklist/wishlist.html
+++ b/templates/tasklist/wishlist.html
@@ -9,54 +9,78 @@
 {% block main %}
     <nav class="plate">
         <a href="{{ url_for('home') }}">Back</a>
+        {% if user_type == "child" or user_type == "parent" %}
+            <a href="{{ url_for('task_list_basic', task_list_id=task_list['task_list_id']) }}">Basic</a>
+        {% endif %}
         {% if user_type == "parent" %}
             <a href="{{ url_for('task_list_admin', task_list_id=task_list['task_list_id']) }}">Admin</a>
         {% endif %}
         {% if user_type == "child" or user_type == "parent" %}
-            <a href="{{ url_for('task_list_basic', task_list_id=task_list['task_list_id']) }}">Basic</a>
             <a href="{{ url_for('task_list_wish_list', task_list_id=task_list['task_list_id']) }}">Wish List</a>
         {% endif %}
     </nav>
-    <!-- <form class="plate" action="{{ url_for('task_list_basic', task_list_id=task_list['task_list_id']) }}" method="post"> -->
-        <!-- <div class="fields"> -->
-            <!-- <label for="task-name">Enter Name:</label> -->
-            <!-- <input type="text" id="task-name" name="name" maxlength="32" required="" /> -->
-            <!-- <label for="task-description">Enter Description:</label> -->
-            <!-- <textarea style="resize: none;" id="task-description" name="description" maxlength="256"></textarea> -->
-            <!-- <label for="date-time-due">Enter Date-Time Due:</label> -->
-            <!-- <input type="datetime-local" id="date-time-due" name="task-date-time-due" disabled="" /> -->
-        <!-- </div> -->
-        <!-- <div class="actions"> -->
-            <!-- <button class="larger" name="submit" value="create">Create Task</button> -->
-        <!-- </div> -->
-    <!-- </form> -->
-    <!-- {% if deletable_tasks %} -->
-        <!-- <form class="plate" action="{{ url_for('task_list_basic', task_list_id=task_list['task_list_id']) }}" method="post"> -->
-            <!-- <div class="fields"> -->
-                <!-- <label for="tasks">Tasks:</label> -->
-                <!-- <select id="tasks" name="id" required=""> -->
-                    <!-- {% for task in deletable_tasks %} -->
-                        <!-- <option value="{{ task['task_id'] }}">{{ task["name"] }}</option> -->
-                    <!-- {% endfor %} -->
-                <!-- </select> -->
-            <!-- </div> -->
-            <!-- <div class="actions"> -->
-                <!-- <button class="larger" name="submit" value="delete">Delete Task</button> -->
-            <!-- </div> -->
-        <!-- </form> -->
-    <!-- {% endif %} -->
-    <!-- {% if tasks %} -->
-        <!-- <table class="task-list plate"> -->
-            <!-- <tr> -->
-                <!-- <th>Name</th> -->
-                <!-- <th>Description</th> -->
-            <!-- </tr> -->
-            <!-- {% for task in tasks %} -->
-                <!-- <tr> -->
-                    <!-- <td>{{ task["name"] }}</td> -->
-                    <!-- <td>{{ task["description"] }}</td> -->
-                <!-- </tr> -->
-            <!-- {% endfor %} -->
-        <!-- </table> -->
-    <!-- {% endif %} -->
+    {% if user_type == "child" %}
+        <p class="plate">
+            You have {{ points }} point(s).
+        </p>
+    {% endif %}
+    <form class="plate" action="{{ url_for('task_list_wish_list', task_list_id=task_list['task_list_id']) }}" method="post">
+        <div class="fields">
+            <label for="wish-name">Enter Name:</label>
+            <input type="text" id="wish-name" name="name" maxlength="32" required="" />
+            <label for="wish-description">Enter Description:</label>
+            <textarea style="resize: none;" id="wish-description" name="description" maxlength="256"></textarea>
+        </div>
+        <div class="actions">
+            <button class="larger" name="submit" value="create">Create Wish</button>
+        </div>
+    </form>
+    {% if wishes %}
+        <form class="plate" action="{{ url_for('task_list_wish_list', task_list_id=task_list['task_list_id']) }}" method="post">
+            <div class="fields">
+                <label for="wishes">Wishes:</label>
+                <select id="wishes" name="id" required="">
+                    {% for wish in wishes %}
+                        <option value="{{ wish['wish_id'] }}">{{ wish["name"] }}</option>
+                    {% endfor %}
+                </select>
+            </div>
+            <div class="actions">
+                <button class="larger" name="submit" value="delete">Delete Wish</button>
+            </div>
+        </form>
+    {% endif %}
+    {% if user_type == "parent" and wishes %}
+        <form class="plate" action="{{ url_for('task_list_wish_list', task_list_id=task_list['task_list_id']) }}" method="post">
+            <div class="fields">
+                <label for="wishes">Wishes:</label>
+                <select id="wishes" name="id" required="">
+                    {% for wish in wishes %}
+                        <option value="{{ wish['wish_id'] }}">{{ wish["name"] }}</option>
+                    {% endfor %}
+                </select>
+                <label for="wish-points">Enter Points:</label>
+                <input type="text" id="wish-points" name="points" maxlength="3" pattern="^\d+$" autocomplete="off" required="" />
+            </div>
+            <div class="actions">
+                <button class="larger" name="submit" value="modify">Add Points to Wish</button>
+            </div>
+        </form>
+    {% endif %}
+    {% if wishes %}
+        <table class="task-list plate">
+            <tr>
+                <th>Name</th>
+                <th>Description</th>
+                <th>Points</th>
+            </tr>
+            {% for wish in wishes %}
+                <tr>
+                    <td>{{ wish["name"] }}</td>
+                    <td>{{ wish["description"] }}</td>
+                    <td>{{ wish["points"] }}</td>
+                </tr>
+            {% endfor %}
+        </table>
+    {% endif %}
 {% endblock %}
